@@ -1,3 +1,7 @@
+2014-04-28  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	Makefile.am: New names for README.* files.
+
 2014-04-17  Karl Berry  <karl@tug.org>
 
 	* version.ac (tex_live_version): starting pretest, no more /dev.
